OO-8179: fixing registration email wildcard problem and existingUser mail